Fixed user ID field missing annotaion for sequence generator + equqls qnd tostring for both user output dtos. USER CONTROLLER AND USERSERVICE HAVE BEEN COMMENTED OUT BECAUSE OF UNKNOWN COMPILATION ERRORS